--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* ------------------------ BEGIN ------------------------ */
+.in-progress {
+    width: 100%;
+    height: 15%;
+    font-family: 'Montserrat';
+    font-size: 13px;
+    font-style: italic;
+    color: #d4d4d4;
+}
 html, body {
     height: 100%;
     width: 100%;
