--- a/style.css
+++ b/style.css
@@ -26,7 +26,25 @@ html, body {
     max-width: 1050px;
     /* background-color: #313131; */
     background-image: linear-gradient(to bottom left, #000B47, #B1B5CA);
-    /* background-image: linear-gradient(to bottom right, #070b79, #b2a6a6); */
+    background-size: 150% 100%;
+    -webkit-animation: Animation 7s ease-in-out infinite;
+    -moz-animation: Animation 7s ease-in-out infinite;
+    animation: Animation 7s ease-in-out infinite;
+}
+@-webkit-keyframes Animation {
+    0%{background-position:right 0 top 0}
+    50%{background-position:right 80% top 0}
+    100%{background-position:right 0 top 0}
+}
+@-moz-keyframes Animation {
+    0%{background-position:right 0 top 0}
+    50%{background-position:right 80% top 0}
+    100%{background-position:right 0 top 0}
+}
+@keyframes Animation { 
+    0%{background-position:right 0 top 0}
+    50%{background-position:right 80% top 0}
+    100%{background-position:right 0 top 0}
 }
 /* ------------------------ DIVISIONS ------------------------ */
 .top {
@@ -231,7 +249,7 @@ svg.hovered {
 .transition {
     transition-property: margin-top background-color;
     transition-timing-function: ease-in;
-    transition-duration: 0.1s;
+    transition-duration: 0.12s;
 }
 /* ------------------------ TEMPORARY ------------------------ */
 .menu {
@@ -244,12 +262,10 @@ svg.hovered {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    /* background-color: blue; */
 }
 #display {
     height: 20px;
     bottom: 45px;
-    /* background-color: green; */
     opacity: 0;
     font-family: 'Montserrat';
     font-size: 14px;
@@ -278,11 +294,11 @@ svg.hovered {
     opacity: 1;
 }
 
-/* .in-progress {
+.in-progress {
     width: 100%;
-    height: 15%;
+    height: 25%;
     font-family: 'Montserrat';
     font-size: 13px;
     font-style: italic;
     color: #FFFFFF;
-} */
+}
