--- a/desinv/style.css
+++ b/desinv/style.css
@@ -76,6 +76,11 @@ html, body {
     align-items: center;
 }
 
+.margin {
+    width: 100%;
+    height: 50px;
+}
+
 #collaborative, #creative-matrix {
     width: 100%;
     /* height: 200px; */
@@ -83,8 +88,4 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-
-#creative-matrix {
-    
 }
