--- a/desinv/assets/css/design.css
+++ b/desinv/assets/css/design.css
@@ -64,7 +64,6 @@
 #design-content {
     width: 88%;
     height: 100%;
-    background-color: gray;
     overflow: hidden;
 }
 
@@ -104,9 +103,15 @@
 .design-content-section {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* border-style: solid;
+    border-width: 1px;
+    border-color: black; */
 }
 
-#ideation-container {
+/* #ideation-container {
     background-color: var(--darkAccent);
 }
 
@@ -116,7 +121,7 @@
 
 #implementation-container {
     background-color: var(--mainBrand);
-}
+} */
 
 
 /* ---- DESIGN COMPONENTS --------------------------------- */
@@ -128,13 +133,25 @@
     /* background-color: white; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    align-items: center;
 }
 
 .design-component {
-    width: 100%;
+    /* width: 100%; */
+
+    width: 90%;
+    height: 30%;
+    background-color: var(--darkShade);
+    overflow: hidden;
+    box-shadow: 0px 2px 4px 0px var(--shadow);
+    position: relative;
     border-radius: 6px;
     transition-duration: 200ms;
+}
+
+.design-component:hover {
+    box-shadow: 0px 4px 6px 0px var(--shadow);
 }
 
 .design-overlay {
@@ -152,21 +169,62 @@
     opacity: 0.1;
 }
 
-
+.design-component-title {
+    width: 88%;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-family: "Inika";
+    font-size: 15pt;
+    font-weight: bold;
+    color: var(--darkShade);
+}
 
 #team-collaboration {
-    height: 25%;
-    background-color: var(--darkShade);
-    overflow: hidden;
-    box-shadow: 0px 2px 4px 0px var(--shadow);
-    position: relative;
+    height: 20%;
 }
 
-#team-collaboration:hover {
-    box-shadow: 0px 4px 6px 0px var(--shadow);
+#matrix {
+    height: 52%;
 }
 
-.collaborative {
+#importance {
+    height: 36%;
+}
+
+
+#moodboard {
+    height: 36%;
+}
+
+#concept {
+    height: 81%;
+}
+
+#sketch {
+    height: 30%;
+}
+
+#storyboard {
+    height: 42%;
+}
+
+#cad {
+    height: 15%;
+}
+
+#poster {
+    height: 57%;
+}
+
+#rationale {
+    height: 36%;
+}
+
+#presentation {
+    height: 36%;
+}
+
+.design-preview {
     width: 100%;
     height: auto;
 }
@@ -191,7 +249,13 @@
 .overlay-picture {
     box-shadow: 0px 4px 10px 0px var(--shadow);
     /* z-index: 5; */
+    z-index: 500;
 }
+
+.overlay-picture:hover {
+    cursor: default;
+}
+
 
 #clickable-overlay {
     width: 100%;
@@ -200,17 +264,65 @@
     z-index: 5;
 }
 
-#collaborative-expanded {
+#team-collaboration-expanded {
     width: 74%;
     min-width: 860px;
     max-width: 1060px;
     height: auto;
-    z-index: 500;
 }
 
-#collaborative-expanded:hover {
-    cursor: default;
+#matrix-expanded {
+    height: 90%;
 }
+
+#importance-expanded {
+    width: 74%;
+    min-width: 860px;
+    max-width: 1060px;
+    height: auto;
+}
+
+#moodboard-expanded {
+    width: 74%;
+    min-width: 860px;
+    max-width: 1060px;
+    height: auto;
+}
+
+#concept-expanded {
+    height: 90%;
+}
+
+#sketch-expanded {
+    width: 74%;
+    min-width: 860px;
+    max-width: 1060px;
+    height: auto;
+}
+
+#storyboard-expanded {
+    width: 74%;
+    min-width: 860px;
+    max-width: 1060px;
+    height: auto;
+}
+
+#rationale-expanded {
+    height: 90%;
+}
+
+#poster-expanded {
+    height: 90%;
+}
+
+#cad-expanded {
+    width: 74%;
+    min-width: 860px;
+    max-width: 1060px;
+    height: auto;
+}
+
+
 
 /* #final-matrix {
     height: 50%;
