--- a/desinv/assets/css/style.css
+++ b/desinv/assets/css/style.css
@@ -201,7 +201,7 @@ html, body {
 
 #team-container {
     width: 100%;
-    min-width: 1260px;
+    min-width: 1000px;
     height: 100%;
     min-height: 650px;
     background-color: var(--lightShade);
@@ -211,20 +211,34 @@ html, body {
 }
 
 .cards-container {
-    width: 1200px;
-    height: 420px;
+    width: 950px;
+    height: 520px;
+    /* margin-left: 130px; */
+    /* background-color: gray; */
+    display: flex;
+    /* flex-direction: column; */
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* .cards-row {
+    width: 100%;
+    height: 48%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
+} */
 
 .card {
     width: 22%;
-    height: 100%;
+    height: 70%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* flex-direction: column;
+    align-items: center; */
 }
 
 .picture-container {
@@ -246,7 +260,9 @@ html, body {
     width: 100%;
     height: 70%;
     border-radius: 3px;
-    margin-top: 100px;
+    margin-top: 80px;
+    /* margin-left: 53%;
+    margin-top: -170px; */
     position: relative;
 }
 
@@ -257,6 +273,7 @@ html, body {
     font-size: 20pt;
     color: var(--darkShade);
     margin-top: 73%;
+    text-align: center;
 }
 
 .description {
@@ -265,7 +282,8 @@ html, body {
     font-family: 'Raleway';
     font-size: 10pt;
     color: var(--lightAccent);
-    margin-top: 10px;
+    margin-top: 12px;
+    /* margin-left: px; */
     display: flex;
     flex-direction: column;
     text-align: center;
