--- a/desinv/assets/css/style.css
+++ b/desinv/assets/css/style.css
@@ -74,9 +74,12 @@ html, body {
 }
 
 #navbar {
-    width: 60%;
+    /* width: 60%;
     min-width: 630px;
-    max-width: 690px;
+    max-width: 690px; */
+    width: 45%;
+    min-width: 450px;
+    max-width: 510px;
     height: 50px;
     display: flex;
     flex-direction: row;
